--- a/css/maincss.css
+++ b/css/maincss.css
@@ -247,74 +247,6 @@
   opacity: 90%;
   background-color: #e1ebfa;
 }
-.reviews {
-  height: 290px;
-  display: flex;
-  width: 1110px;
-  justify-content: space-between;
-  margin-bottom: 100px;
-}
-.reviews_leftmenu {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.reviews_leftmenu_general_title {
-  margin-bottom: 20px;
-}
-.reviews_leftmenu_general_title span {
-  color: #FF6565;
-  font-weight: 700;
-  font-size: 32px;
-}
-.reviews_leftmenu_general_submenu {
-  display: flex;
-  flex-direction: column;
-}
-.reviews_leftmenu_general_submenu span {
-  font-size: 14px;
-  color: #343745;
-  opacity: 35%;
-  margin-bottom: 15px;
-}
-.reviews_leftmenu_general_submenu span:hover {
-  opacity: 100%;
-  cursor: pointer;
-}
-.reviews_rightmenu {
-  display: flex;
-  width: 825px;
-}
-.reviews_rightmenu_block {
-  height: 290px;
-  background-color: #EEF7FF;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  margin-right: 23px;
-  border-radius: 5px;
-  margin-bottom: 20px;
-}
-.reviews_rightmenu_block_header {
-  display: flex;
-  align-items: center;
-  margin-left: 15px;
-}
-.reviews_rightmenu_block_header_photo {
-  width: 60px;
-  height: 60px;
-}
-.reviews_rightmenu_block_header_name {
-  margin-left: 10px;
-}
-.reviews_rightmenu_block_body {
-  width: 310px;
-  height: 110px;
-  margin-left: 15px;
-}
-.reviews_rightmenu_block_footer {
-  margin-left: 15px;
-}
 .capture-form {
   width: 100%;
   height: 382px;
@@ -757,7 +689,6 @@
 }
 .sites_leftmenu_general_submenu span:hover {
   transition: 0.5s ease;
-  font-size: 18px;
   opacity: 100%;
   cursor: pointer;
   font-weight: 600;
@@ -848,8 +779,6 @@
   -ms-filter: grayscale(100%);
   -o-filter: grayscale(100%);
   filter: grayscale(100%);
-  filter: gray;
-  /* IE 6-9 */
   /*Добавим вот такой вот код*/
   -webkit-transition: all 0.5s;
   -moz-transition: all 0.5s;
@@ -886,6 +815,88 @@
   opacity: 100%;
   cursor: pointer;
   font-weight: 600;
+}
+.stuff {
+  display: flex;
+  margin-bottom: 150px;
+  justify-content: space-between;
+}
+.stuff_leftmenu {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.stuff_leftmenu_general_title {
+  margin-bottom: 20px;
+}
+.stuff_leftmenu_general_title span {
+  color: #FF6565;
+  font-weight: 700;
+  font-size: 32px;
+}
+.stuff_leftmenu_general_submenu {
+  display: flex;
+  flex-direction: column;
+}
+.stuff_leftmenu_general_submenu span {
+  font-size: 14px;
+  color: #343745;
+  opacity: 35%;
+  margin-bottom: 15px;
+}
+.stuff_leftmenu_general_submenu span:hover {
+  transition: 0.5s ease;
+  font-size: 18px;
+  opacity: 100%;
+  cursor: pointer;
+  font-weight: 600;
+}
+.stuff_rightmenu {
+  display: flex;
+  flex-wrap: wrap;
+}
+.stuff_rightmenu_block {
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  height: 200px;
+  width: 450px;
+  background-image: url("/include.digital/img/img_4.png");
+  background-position: center;
+  background-size: cover;
+  opacity: 80%;
+}
+.stuff_rightmenu_block_fio {
+  font-weight: 700;
+  display: flex;
+  flex-direction: column;
+  line-height: 15px;
+}
+.stuff_rightmenu_block_fio span {
+  color: white !important;
+}
+.stuff_rightmenu_block_position {
+  font-weight: 700;
+}
+.stuff_rightmenu_block_position span {
+  color: white !important;
+}
+.stuff_rightmenu_block:hover {
+  opacity: 100%;
+  transition: 0.5s ease;
+  cursor: pointer;
+}
+.reviews {
+  display: flex;
+}
+.reviews_rightmenu_block {
+  background: #EEF7FF;
+  display: flex;
+  flex-direction: column;
+}
+.reviews_rightmenu_block_header {
+  display: flex;
 }
 _rightmenu_block {
   background: #8A223B;
