--- a/css/maincss.css
+++ b/css/maincss.css
@@ -891,12 +891,53 @@
   display: flex;
 }
 .reviews_rightmenu_block {
+  border-radius: 5px;
   background: #EEF7FF;
   display: flex;
   flex-direction: column;
 }
 .reviews_rightmenu_block_header {
   display: flex;
+  align-items: center;
+}
+.reviews_rightmenu_block_header_person {
+  display: flex;
+  flex-direction: column;
+}
+.reviews_rightmenu_block_body {
+  display: flex;
+  margin-top: 37px;
+  width: 310px;
+}
+.reviews_rightmenu_block_footer {
+  margin-top: 30px;
+}
+.reviews_rightmenu_letter {
+  border-radius: 5px;
+  background: #FF6565;
+  display: flex;
+  flex-direction: column;
+}
+.reviews_rightmenu_letter_title {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 37px;
+}
+.reviews_rightmenu_letter_title_logo img {
+  width: 141px;
+}
+.reviews_rightmenu_letter_title_name span {
+  color: white;
+}
+.reviews_rightmenu_letter_text {
+  margin-bottom: 96px;
+}
+.reviews_rightmenu_letter_text span {
+  color: #FFFFFF;
+}
+.reviews_rightmenu_letter_action a {
+  text-decoration: none;
+  color: #FFFFFF;
 }
 _rightmenu_block {
   background: #8A223B;
