--- a/css/maincss.less
+++ b/css/maincss.less
@@ -954,51 +954,13 @@
 }
 
 .footer {
-  display: flex;
-  justify-content: center;
-  height: 457px;
+
   background: #374A70;
 
-
-  &_logo {
-    margin-top: 100px;
-  }
-
-  &_item {
-    display: flex;
-    flex-direction: column;
-    margin-top: 100px;
-
-    &_title {
-      margin-bottom: 30px;
-
-      span {
-        font-size: 18px;
-        color: #FFFFFF;
-        font-weight: 700;
-      }
+  &_block {
+    span {
+      color: white !important;
     }
-
-    &_li {
-      line-height: 20px;
-
-      p {
-        color: white;
-
-        a {
-          color: white;
-          text-decoration: none;
-        }
-
-        a:hover {
-          cursor: pointer;
-          font-size: 18px;
-          transition: 0.2s;
-        }
-
-      }
-    }
-
   }
 }
 
@@ -1455,7 +1417,6 @@
 
   }
 }
-
 
 
 
