--- a/templates/footer.html
+++ b/templates/footer.html
@@ -10,8 +10,7 @@
     <!-- Bootstrap CSS (jsDelivr CDN) -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <script src="/js/main.js"></script>
-    <link href="/css/maincss.css" type="text/css" rel="stylesheet">
-    <link href="/css/sevices.css" type="text/css" rel="stylesheet">
+    <link href="/css/style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap&subset=cyrillic,cyrillic-ext,latin-ext"
           rel="stylesheet">
     <!-- Bootstrap Bundle JS (jsDelivr CDN) -->
@@ -23,20 +22,38 @@
     <footer class="footer fixed-bottom">
         <div class="container ">
             <div class="row  mt-5 mb-5 justify-content-between" id="footer_block">
-
-                <div class="footer_block col-xl-3  col-md-3 col-sm-3 col-xs-3" id="law">
-                    <div class="footer_block_title font-weight-bold">
+                <div class="footer_logo mr-5"><img id="footer_logo" src="" alt=""></div>
+                <div class="footer_block col-xl-3  col-md-3 col-sm-3 col-xs-3 " id="law">
+                    <div class="footer_block_title font-weight-bold mb-4">
                         <span>Правовая часть</span>
                     </div>
+                    <div class="footer_block_li d-flex flex-column">
+                        <a class="mb-2" href="">Обработка персональных данных</a>
+                        <a class="mb-2" href="">Правила пользования сайтом</a>
+                        <a class="mb-2" href="">Какой-то хэштаг</a>
+                    </div>
                 </div>
-                <div class="footer_block col-xl-3  col-md-3 col-sm-3 col-xs-3" id="services">
-                    <div class="footer_block_title  font-weight-bold">
-                        <span>Правовая часть</span>
+                <div class="footer_block col-xl-3  col-md-3 col-sm-3 col-xs-3 " id="services">
+                    <div class="footer_block_title font-weight-bold mb-4">
+                        <span>Услуги</span>
+                    </div>
+                    <div class="footer_block_li d-flex flex-column">
+                        <a class="mb-2" href="">Разработка сайтов</a>
+                        <a class="mb-2" href="">Разработка интернет магазинов</a>
+                        <a class="mb-2" href="">Разработка лендинг пейджей</a>
                     </div>
                 </div>
                 <div class="footer_block col-xl-3  col-md-3 col-sm-3 col-xs-3" id="contacts">
-                    <div class="footer_block_title  font-weight-bold">
-                        <span>Правовая часть</span>
+                    <div class="footer_block_title font-weight-bold mb-4">
+                        <span>Контакты</span>
+                    </div>
+                    <div class="footer_block_li d-flex flex-column">
+                        <a class="mb-2" href="">888855541414</a>
+                        <a class="mb-2" href="">VK3333asd@gmail.com</a>
+                        <a class="mb-2" href="">orenburg</a>
+                        <a class="mb-2" href="">vk <img src="/img/arrow.svg" alt=""></a>
+                        <a class="mb-2" href="">instagrama <img src="/img/arrow.svg" alt=""></a>
+                        <a class="mb-2" href="">facebooka <img src="/img/arrow.svg" alt=""></a>
                     </div>
                 </div>
             </div>
