--- a/css/maincss.less
+++ b/css/maincss.less
@@ -346,98 +346,6 @@
 
 }
 
-//.reviews {
-//  height: 290px;
-//  display: flex;
-//  width: 1110px;
-//  justify-content: space-between;
-//  margin-bottom: 100px;
-//
-//  &_leftmenu {
-//    display: flex;
-//    flex-direction: column;
-//    justify-content: space-between;
-//
-//
-//    &_general {
-//      &_title {
-//        margin-bottom: 20px;
-//
-//        span {
-//          color: #FF6565;
-//          font-weight: 700;
-//          font-size: 32px;
-//        }
-//      }
-//
-//      &_submenu {
-//        display: flex;
-//        flex-direction: column;
-//
-//        span {
-//          font-size: 14px;
-//          color: #343745;
-//          opacity: 35%;
-//          margin-bottom: 15px;
-//
-//          &:hover {
-//            opacity: 100%;
-//            cursor: pointer
-//          }
-//        }
-//      }
-//    }
-//  }
-//
-//  &_rightmenu {
-//
-//    display: flex;
-//    width: 825px;
-//
-//    &_block {
-//      height: 290px;
-//      background-color: #EEF7FF;
-//
-//      &_header {
-//        display: flex;
-//        align-items: center;
-//        margin-left: 15px;
-//
-//        &_photo {
-//          width: 60px;
-//          height: 60px;
-//        }
-//
-//        &_name {
-//          margin-left: 10px;
-//        }
-//      }
-//
-//      &_body {
-//        width: 310px;
-//        height: 110px;
-//        margin-left: 15px;
-//      }
-//
-//      &_footer {
-//        margin-left: 15px;
-//      }
-//
-//      display: flex;
-//      flex-direction: column;
-//      justify-content: space-around;
-//      margin-right: 23px;
-//      border-radius: 5px;
-//      margin-bottom: 20px;
-//
-//    }
-//
-//
-//  }
-//
-//
-//}
-
 .capture-form {
   width: 100%;
   height: 382px;
@@ -958,9 +866,14 @@
   background: #374A70;
 
   &_block {
-    span {
+
+    a {
       color: white !important;
     }
+
+
+
+
   }
 }
 
