--- a/css/style.less
+++ b/css/style.less
@@ -13,8 +13,19 @@
 
   &_block {
 
-   span, a {
+    span, a {
       color: white !important;
+    }
+  }
+}
+
+.header {
+  &_button {
+    border-radius: 5px;
+    background: #FF6565;
+
+    span {
+      color: white;
     }
   }
 }
