--- a/templates/footer.html
+++ b/templates/footer.html
@@ -18,6 +18,44 @@
 </head>
 <body>
 
+
+<section id="header">
+    <header class="header fixed-top">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container ">
+                <a href="/index.html" class="navbar-brand col-xl-3 col-lg-2"><img id="header_logo" src="" alt=""></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navContent"
+                        aria-controls="navContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse col-xl-6 col-lg-7" id="navContent">
+                    <ul class="navbar-nav mr-auto mb-3 mb-lg-0 ">
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Главная</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Услуги</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Проекты</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Компания</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link"> Блог</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link"> Контакты</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="header_button d-flex justify-content-center align-items-center col-xl-3 col-lg-3 " id="header_button">
+                    <span class="pr-5 pl-5 pb-3 pt-3">Обсудить проект</span></div>
+            </div>
+        </nav>
+    </header>
+</section>
 <section id="footer">
     <footer class="footer fixed-bottom">
         <div class="container ">
