--- a/templates/footer.html
+++ b/templates/footer.html
@@ -21,9 +21,9 @@
 
 <section id="header">
     <header class="header fixed-top">
-        <nav class="navbar navbar-expand-lg">
-            <div class="container ">
-                <a href="/index.html" class="navbar-brand col-xl-3 col-lg-2"><img id="header_logo" src="" alt=""></a>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container  ">
+                <a id="logohref" href="/index.html" class="navbar-brand col-xl-3 col-lg-2"><img id="header_logo" src="" alt=""></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navContent"
                         aria-controls="navContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -51,8 +51,9 @@
                     </ul>
                 </div>
                 <div class="header_button d-flex justify-content-center align-items-center col-xl-3 col-lg-3 " id="header_button">
-                    <span class="pr-5 pl-5 pb-3 pt-3">Обсудить проект</span></div>
+                    <span class="mr-5 ml-5 mb-3 mt-3 text-center">Обсудить проект</span></div>
             </div>
+
         </nav>
     </header>
 </section>
@@ -98,7 +99,5 @@
         </div>
     </footer>
 </section>
-
-
 </body>
 </html>
