--- a/css/style.less
+++ b/css/style.less
@@ -1,18 +1,125 @@
-
+/***************************************************************
+=================Общие классы==================================
+***************************************************************/
 * {
   margin: 0 0 0 0;
-  font-family: "Montserrat", sans-serif;
-  color: #374A70;
+  font-family: "Montserrat", sans-serif !important;;
+  color: #374A70!important;
   font-size: 16px;
   box-sizing: border-box;
 }
+
+.menuLimiter {
+  width: 100%;
+  /* Зададим возможность горизонтальной прокрутки */
+  overflow-x: scroll;
+  /* Для Сафари дополнительно зададим инерцию при прокрутке.
+  С инерцией меню будет «оттягиваться» при попытке прокрутить
+  его за его пределы. */
+  -webkit-overflow-scrolling: touch;
+
+}
+
+.colred {
+  color: #FF6565 !important;
+}
+
+#f14 span {
+  font-size: 14px
+}
+
+#leftmenu_title_column {
+  font-size: 16px
+}
+
+.b-red {
+  background: #FF6565;
+}
+
+.b-red-hover:hover {
+  color: #FF6565 !important;;
+}
+
+.b-blue {
+  background: #374A70;
+}
+
+.mb-150 {
+  margin-bottom: 150px;
+}
+
+.mb-100 {
+  margin-bottom: 100px;
+}
+
+.mb-73 {
+  margin-bottom: 73px;
+}
+
+.mb-250 {
+  margin-top: 250px;
+}
+
+.redarrow {
+  margin-left: 5px;
+}
+
+/***************************************************************
+=================Общие классы END==============================
+***************************************************************/
+
+
+
+
+
+
+/***************************************************************
+=================CARUSEL==============================
+***************************************************************/
+
+#slide_line {
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+  overflow: hidden;
+}
+
+#slide_line img {
+  width: 7.4%;
+  height: auto;
+}
+
+.string:hover {
+  cursor: pointer;
+}
+
+@media (max-width: 800px) {
+  #slide_line img {
+    width: 28%;
+    max-width: 160px;
+    margin-right: 1%;
+  }
+}
+
+@media (max-width: 450px) {
+  #slide_line img {
+    width: 99%;
+  }
+}
+
+/***************************************************************
+=================CARUSEL END==============================
+***************************************************************/
+
+/***************************************************************
+================BLOCKS==============================
+***************************************************************/
 
 .footer {
 
   background: #374A70;
 
   &_block {
-
     span, a {
       color: white !important;
     }
@@ -20,12 +127,164 @@
 }
 
 .header {
+  background: white;
+
   &_button {
+    opacity: 80%;
+
+    &:hover {
+      cursor: pointer;
+      opacity: 100%;
+    }
+
     border-radius: 5px;
     background: #FF6565;
 
     span {
-      color: white;
+      color: white!important;
     }
   }
 }
+
+.main {
+  &_block {
+    background: url("/include.digital/img/bg.svg") no-repeat;
+  }
+}
+
+.default {
+
+  &_leftmenu {
+
+    &_title {
+      span {
+        font-size: 32px;
+      }
+    }
+
+    &_items {
+      span:hover {
+        transition: 0.2s ease;
+        cursor: pointer;
+        font-weight: bold;
+      }
+
+    }
+
+    &_allservices {
+      span:hover {
+        cursor: pointer;
+        font-weight: bold;
+        transition: 0.2s ease;
+      }
+    }
+  }
+
+  &_rightmenu {
+    &_block {
+
+      display: flex;
+      background-color: #EEF7FF;
+      justify-content: space-between;
+      background-image: url("/include.digital/img/krug.svg");
+      background-repeat: no-repeat;
+      background-position: right bottom;
+      border-radius: 5px;
+
+      &_text {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        &_title {
+
+
+          span {
+
+            font-weight: 700;
+          }
+        }
+
+        &_description {
+        }
+
+        &_detail {
+
+
+          span {
+            font-size: 14px
+          }
+        }
+
+      }
+
+      &_image {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+
+        img {
+          width: 134px;
+          height: 123px;
+        }
+      }
+
+      &:hover {
+        span {
+          color: white!important;
+        }
+
+        border-bottom-right-radius: 15px;
+
+        img:first-child {
+          transition: 0.5s ease;
+          margin-bottom: 10px
+        }
+
+        cursor: pointer;
+        transition: 0.5s ease;
+        background-color: #374A70;
+        background-image: url("/include.digital/img/krug3.svg");
+
+        a {
+          color: #f6545c
+        }
+
+        a:hover {
+          color: #f6545c;
+        }
+      }
+    }
+
+  }
+}
+
+.projects {
+  &_leftmenu {
+
+    &_title {
+      span {
+        font-size: 32px;
+      }
+    }
+
+    &_items {
+      span:hover {
+        transition: 0.2s ease;
+        cursor: pointer;
+        font-weight: bold;
+      }
+
+    }
+
+    &_allservices {
+      span:hover {
+        cursor: pointer;
+        font-weight: bold;
+        transition: 0.2s ease;
+      }
+    }
+}}
+/***************************************************************
+=================BLOCKS END==============================
+***************************************************************/
