--- a/templates/home.html
+++ b/templates/home.html
@@ -29,6 +29,7 @@
     <!-- Bootstrap CSS (jsDelivr CDN) -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <script src="/js/main.js"></script>
+    <script src="/js/resize.js"></script>
     <link href="/css/style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap&subset=cyrillic,cyrillic-ext,latin-ext"
           rel="stylesheet">
@@ -40,7 +41,7 @@
     <header class="header fixed-top ">
         <nav class="navbar navbar-expand-lg navbar-light ">
             <div class="container">
-                <a id="logohref" href="/index.html"
+                <a id="logohref" href="/include.digital/templates/home.html"
                    class="navbar-brand col-xl-3 col-lg-2  d-xl-flex d-lg-flex d-md-none d-sm-none d-none"><img
                         id="header_logo" src=""
                         alt=""></a>
@@ -106,10 +107,10 @@
     </div>
 </section>
 <section id="directions" class="mb-150">
-    <div class="container">
+    <div class="container ">
         <div class="default d-xl-flex d-lg-flex d-md-none d-sm-none d-none" id="leftmenu_column">
-            <div class="row">
-                <div class="default_leftmenu col-xl-3 col-lg-3 d-flex justify-content-between flex-column ">
+            <div class="row justify-content-between">
+                <div class="default_leftmenu col-xl-2 col-lg-3 d-flex justify-content-between flex-column ">
                     <div class="wrapper d-flex flex-column">
                         <div class="default_leftmenu_title mb-4 ">
                             <span class="font-weight-bold colred" id="leftmenu_title">Направления</span>
@@ -125,9 +126,25 @@
                         <img class="redarrow" src="/img/Vector.svg" alt="">
                     </div>
                 </div>
-                <div class="default_rightmenu col-xl-9 col-lg-9">
-                    <div class="row justify-content-center">
-                        <div class="default_rightmenu_block col-xl-5  col-lg-5 mr-4 mb-4">
+                <div class="default_rightmenu col-xl-10 col-lg-9">
+                    <div class="row ">
+                        <div class=" default_rightmenu_block col-xl-5  col-lg-6 mb-4 mr-5">
+                            <div class="default_rightmenu_block_text">
+                                <div class="defaultblock_rightmenu_item_text_title  mt-3 mb-3">
+                                    <span class="font-weight-bold">Корпоративные сайты</span>
+                                </div>
+                                <div class="defaultblock_rightmenu_item_text_description mb-3">
+                                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                                </div>
+                                <div class="defaultblock_rightmenu_item_text_detail mb-3  ">
+                                    <span>Подробнее</span><img class="redarrow" src="img/Vector.svg" alt="">
+                                </div>
+                            </div>
+                            <div class="default_rightmenu_block_image">
+                                <img src="/img/pic.png" alt="">
+                            </div>
+                        </div>
+                        <div class=" default_rightmenu_block col-xl-5 mb-4 col-lg-5 ">
                             <div class="default_rightmenu_block_text ">
 
                                 <div class="defaultblock_rightmenu_item_text_title  mt-3 mb-3">
@@ -148,7 +165,7 @@
                                 <img src="/img/pic.png" alt="">
                             </div>
                         </div>
-                        <div class="default_rightmenu_block col-xl-5 mb-4 col-lg-5">
+                        <div class=" default_rightmenu_block col-xl-5 col-lg-6 mr-5">
                             <div class="default_rightmenu_block_text ">
 
                                 <div class="defaultblock_rightmenu_item_text_title  mt-3 mb-3">
@@ -169,7 +186,7 @@
                                 <img src="/img/pic.png" alt="">
                             </div>
                         </div>
-                        <div class="default_rightmenu_block col-xl-5 mr-4 col-lg-5">
+                        <div class=" default_rightmenu_block col-xl-5 col-lg-5">
                             <div class="default_rightmenu_block_text ">
 
                                 <div class="defaultblock_rightmenu_item_text_title  mt-3 mb-3">
@@ -190,28 +207,6 @@
                                 <img src="/img/pic.png" alt="">
                             </div>
                         </div>
-                        <div class="default_rightmenu_block col-xl-5 col-lg-5">
-                            <div class="default_rightmenu_block_text ">
-
-                                <div class="defaultblock_rightmenu_item_text_title  mt-3 mb-3">
-                                    <span class="font-weight-bold">Корпоративные сайты</span>
-                                </div>
-
-                                <div class="defaultblock_rightmenu_item_text_description mb-3">
-                                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
-                                </div>
-
-                                <div class="defaultblock_rightmenu_item_text_detail mb-3  ">
-                                    <span>Подробнее</span><img class="redarrow" src="img/Vector.svg" alt="">
-                                </div>
-
-
-                            </div>
-                            <div class="default_rightmenu_block_image">
-                                <img src="/img/pic.png" alt="">
-                            </div>
-                        </div>
-
                     </div>
                 </div>
             </div>
@@ -240,15 +235,14 @@
         </div>
     </div>
 </section>
-<section id="projects">
+<section id="projects" class="mb-150">
     <div class="container">
-
-        <div class="projects d-xl-flex d-lg-flex d-md-none d-sm-none d-none" id="projecs_leftmenu_column">
+        <div class="projects d-xl-flex d-lg-flex d-md-none d-sm-none d-none" id="projects_leftmenu_column">
             <div class="row">
-                <div class="projects_leftmenu col-xl-3 col-lg-3 d-flex justify-content-between flex-column ">
+                <div class="projects_leftmenu col-xl-2 col-lg-3 d-flex justify-content-between flex-column ">
                     <div class="wrapper d-flex flex-column">
                         <div class="projects_leftmenu_title mb-4 ">
-                            <span class="font-weight-bold colred" id="projects_leftmenu_title">Проекты</span>
+                            <span class="font-weight-bold colred" id="leftmenu_title">Проекты</span>
                         </div>
                         <div class="projects_leftmenu_items d-flex flex-column">
                             <span class="mb-2">Популярные услуги</span>
@@ -257,12 +251,55 @@
                             <span class="mb-2">SEO продвижение</span>
                         </div>
                     </div>
-                    <div class="default_leftmenu_allservices"><span>Все услуги </span>
+                    <div class="projects_leftmenu_allservices"><span>Все услуги </span>
                         <img class="redarrow" src="/img/Vector.svg" alt="">
+                    </div>
+                </div>
+                <div class="projects_rightmenu col-xl-10 col-lg-9">
+                    <div class="row justify-content-end">
+                        <div class="projects_rightmenu_block align-items-center justify-content-around d-xl-flex d-lg-flex d-md-flex d-sm-flex flex-column col-xl-8 col-lg-5 col-md-4 mr-4 mb-4">
+                            <div class="projects_rightmenu_block_image">
+                                <img src="/img/promo1.png" alt="">
+                            </div>
+                            <div class="projects_rightmenu_block_title mb-3"><span>Крутой проект</span> <img
+                                    class="redarrow"
+                                    src="/img/arrow.svg"
+                                    alt=""></div>
+                        </div>
+                        <div class="projects_rightmenu_block align-items-center justify-content-around d-xl-flex d-lg-flex d-md-flex d-sm-flex flex-column col-xl-3 col-lg-5 col-md-4 mb-4">
+                            <div class="projects_rightmenu_block_image">
+                                <img src="/img/promo1.png" alt="">
+                            </div>
+                            <div class="projects_rightmenu_block_title mb-3"><span>Крутой проект</span> <img
+                                    class="redarrow"
+                                    src="/img/arrow.svg"
+                                    alt=""></div>
+                        </div>
+                        <div class="projects_rightmenu_block align-items-center justify-content-around d-xl-flex d-lg-flex d-md-flex d-sm-flex flex-column col-xl-3 col-lg-5 col-md-4 mr-4">
+                            <div class="projects_rightmenu_block_image">
+                                <img src="/img/promo1.png" alt="">
+                            </div>
+                            <div class="projects_rightmenu_block_title mb-3"><span>Крутой проект</span> <img
+                                    class="redarrow"
+                                    src="/img/arrow.svg"
+                                    alt=""></div>
+                        </div>
+                        <div class="projects_rightmenu_block align-items-center justify-content-around d-xl-flex d-lg-flex d-md-flex d-sm-flex flex-column col-xl-8 col-lg-5 col-md-4">
+                            <div class="projects_rightmenu_block_image">
+                                <img src="/img/promo1.png" alt="">
+                            </div>
+                            <div class="projects_rightmenu_block_title mb-3"><span>Крутой проект</span> <img
+                                    class="redarrow"
+                                    src="/img/arrow.svg"
+                                    alt=""></div>
+                        </div>
+
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+
 </section>
 <section id="footer">
     <footer class="footer pt-5">
