--- a/css/style.less
+++ b/css/style.less
@@ -178,7 +178,8 @@
 
   &_rightmenu {
     &_block {
-
+      height: 180px;
+      width: 400px;
       display: flex;
       background-color: #EEF7FF;
       justify-content: space-between;
