--- a/templates/home.html
+++ b/templates/home.html
@@ -109,25 +109,26 @@
 <section id="directions" class="mb-150">
     <div class="container ">
         <div class="default d-xl-flex d-lg-flex d-md-none d-sm-none d-none" id="leftmenu_column">
-            <div class="row justify-content-between">
-                <div class="default_leftmenu col-xl-2 col-lg-3 d-flex justify-content-between flex-column ">
-                    <div class="wrapper d-flex flex-column">
-                        <div class="default_leftmenu_title mb-4 ">
-                            <span class="font-weight-bold colred" id="leftmenu_title">Направления</span>
-                        </div>
-                        <div class="default_leftmenu_items d-flex flex-column">
-                            <span class="mb-2">Популярные услуги</span>
-                            <span class="mb-2">Разработка сайтов</span>
-                            <span class="mb-2">Техническое ведение сайтов</span>
-                            <span class="mb-2">SEO продвижение</span>
-                        </div>
+
+            <div class="default_leftmenu col-xl-3 col-lg-3 d-flex justify-content-between flex-column ">
+                <div class="wrapper d-flex flex-column">
+                    <div class="default_leftmenu_title mb-4 ">
+                        <span class="font-weight-bold colred" id="leftmenu_title">Проекты</span>
                     </div>
-                    <div class="default_leftmenu_allservices"><span>Все услуги </span>
-                        <img class="redarrow" src="/img/Vector.svg" alt="">
+                    <div class="default_leftmenu_items d-flex flex-column">
+                        <span class="mb-2">Популярные услуги</span>
+                        <span class="mb-2">Разработка сайтов</span>
+                        <span class="mb-2">Техподдержка</span>
+                        <span class="mb-2">SEO продвижение</span>
                     </div>
                 </div>
-                <div class="default_rightmenu col-xl-10 col-lg-9">
-                    <div class="row ">
+                <div class="default_leftmenu_allservices"><span>Все услуги </span>
+                    <img class="redarrow" src="/img/Vector.svg" alt="">
+                </div>
+            </div>
+            <div class="default_rightmenu col-xl-11 col-lg-9">
+                <div class="row ">
+                    <div class="row">
                         <div class=" default_rightmenu_block col-xl-5  col-lg-6 mb-4 mr-5">
                             <div class="default_rightmenu_block_text">
                                 <div class="defaultblock_rightmenu_item_text_title  mt-3 mb-3">
@@ -208,8 +209,10 @@
                             </div>
                         </div>
                     </div>
+
                 </div>
             </div>
+
         </div>
         <div class="default d-xl-none d-lg-none" id="leftmenu_row">
             <div class="row flex-column ">
